{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 7,
  "lineage": "fc04b613-c0e4-11f3-e022-67890187cc8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256057170649:route-table/rtb-09941ed8ed279e114",
            "default_route_table_id": "rtb-09941ed8ed279e114",
            "id": "rtb-09941ed8ed279e114",
            "owner_id": "256057170649",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078754797c045df23",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-main-rtb"
            },
            "tags_all": {
              "Name": "test-main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04412158f885f5046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256057170649:security-group/sg-0d91488eaf21b6c7b",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d91488eaf21b6c7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "196.129.90.21/32",
                  "54.242.50.15/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "256057170649",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-default-sg"
            },
            "tags_all": {
              "Name": "test-default-sg"
            },
            "vpc_id": "vpc-04412158f885f5046"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:256057170649:instance/i-0aedf00653a0e6560",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aedf00653a0e6560",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d6ead98c999d8c4",
            "private_dns": "ip-10-10-10-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.91",
            "public_ip": "54.91.79.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f75176b468512ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050227f0543f43de1",
            "tags": {
              "Name": "test-server"
            },
            "tags_all": {
              "Name": "test-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d91488eaf21b6c7b"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-sg",
            "aws_subnet.myapp-subnet-1",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256057170649:internet-gateway/igw-078754797c045df23",
            "id": "igw-078754797c045df23",
            "owner_id": "256057170649",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-04412158f885f5046"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256057170649:subnet/subnet-050227f0543f43de1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050227f0543f43de1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256057170649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-subnet-1"
            },
            "tags_all": {
              "Name": "test-subnet-1"
            },
            "vpc_id": "vpc-04412158f885f5046"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256057170649:vpc/vpc-04412158f885f5046",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0416dad1d7b66f2c3",
            "default_route_table_id": "rtb-09941ed8ed279e114",
            "default_security_group_id": "sg-0d91488eaf21b6c7b",
            "dhcp_options_id": "dopt-0c69e5e77ba22b4a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04412158f885f5046",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09941ed8ed279e114",
            "owner_id": "256057170649",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}